--- a/WorkDiaries/z5256175.md
+++ b/WorkDiaries/z5256175.md
@@ -18,30 +18,53 @@ I was tasked with completing all of the epic and user stories with Nathan. I've 
 
 Week: 3-4
 ========================
-sd
 
 What I did
 ------------------------
-Finished off user stories
+Finished off user stories and started with our sprint one backend. The first of these tasks were to design the backend architecture. I worked on this while on call with Bill and Nathan who also helped in the design strucute. I also set up a backend postgres sql server, hosted externally. With this, I also set up the backend code to connect to the postgres server.
 
 Week: 4-5
 ========================
-sd
 
 What I did
 ------------------------
-sd
+This week was more work on the backend for sprint one. The main objectives of this was to get the authentication side working. The code that I worked on was getting the backend sql server to link with our api server, creating the authentication paths (login & skeleton of register), as well as completing a basic search function.
 
 Week: 5-7
 ========================
-sd
 
 What I did
 ------------------------
-sd
+These weeks, I fleshed out the search function more, adding a search by recipe name and ingredients, mealtype, as well as working on various other bug fixes. I also worked on various backend setup scripts.
 
 Week: 7-8
 ========================
 
 What I did
 ------------------------
+This week was a big push, I worked on adding cuisines to the database (and search), as well as finalising the dynamic sql search function. I fixed the backend automation script, fixed the profile etc.
+
+Week: 8-9
+========================
+
+What I did
+------------------------
+Worked on the edit_recipes functions, as well as fixing more bugs with comments, profile, pretty much all other routes. Worked with Nathan to grab a big ingredients list from USDA to import into the server, 
+
+Week: 9-10
+========================
+This final week was mostly debugging a lot of code, cleaning up functions and working on other basic functions such as recently viewed / favourited recipes / my_recipes.
+
+All components I worked on
+==========================
+
+Almost all of the backend error handling, authentication, searching, contributing.
+In authentication, I worked on the login, updating viewed recipes, jwt\_refresh, authenticating recipe uploader, getting profile information, and debugging all of the rest of the authentication functions.
+
+I worked on all of the searching functions
+
+I worked on the edit recipes function, and also debugged the post recipes function, as well as writing the commenting / recipe review function.
+
+I also transitioned functions out of the main file to clean up the look (but this was ultimately not utilised for everything)
+
+I was also the person responsible for the backend sql architecture and handled all changes / automations / setup of the psql server.
